# chaos-project

./: CMakeLists.txt
include/: Color.h  Ray.h  Triangle.h  Vector3.h
include/geometry/: Hittable.h  Moveable.h  PrimitiveVolumes.h  Triangle.h  Vector3.h
include/renderer/: camera.h
include/utils/: Matrix.h
src/: main.cpp
src/geometry/: Hittable.cpp  Moveable.cpp  Triangle.cpp  Vector3.cpp
src/renderer/: Camera.cpp  Triangle.cpp  Vector3.cpp
